--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,3 +1,9 @@
+$black: #000;
+$blue: #0080ff;
+$white: #fff;
+$light-gray: #e5e5e5;
+$shadow: rgba(0, 0, 0, .2) 2px 2px 10px 2px;
+
 .menu-wrapper {
   align-items: flex-start;
   display: flex;
@@ -18,32 +24,32 @@
 
   .menu-list-item {
     align-items: center;
-    color: #000;
+    color: $black;
     cursor: pointer;
     display: flex;
-    font-size: 0.9rem;
+    font-size: .9rem;
     height: 2.5rem;
     justify-content: flex-start;
     position: relative;
     width: 100%;
 
     &:not(:last-child) {
-      border-bottom: 1px solid #e5e5e5;
+      border-bottom: 1px solid $light-gray;
     }
 
     &:first-child {
-      border-top-left-radius: 0.25rem;
-      border-top-right-radius: 0.25rem;
+      border-top-left-radius: .25rem;
+      border-top-right-radius: .25rem;
     }
 
     &.selected {
-      background: #0080ff;
-      color: #fff;
+      background: $blue;
+      color: $white;
     }
 
     &:hover:not(.selected) {
-      background: #e5e5e5;
-      color: #000;
+      background: $light-gray;
+      color: $black;
     }
 
     &.flip {
@@ -51,7 +57,7 @@
         margin-left: auto;
         order: 2;
         padding-left: 0;
-        padding-right: 0.5rem;
+        padding-right: .5rem;
       }
 
       .chev-icon {
@@ -68,15 +74,15 @@
   }
 
   .name {
-    padding-left: 0.5rem;
+    padding-left: .5rem;
   }
 }
 
 .sub-menu-wrapper {
-  animation: swipeout 0.2s ease-in;
-  background: #fff;
-  border-radius: 0.45rem;
-  box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
+  animation: show .2s ease-in;
+  background: $white;
+  border-radius: .45rem;
+  box-shadow: $shadow;
   left: 102%;
   min-width: 150px;
   position: absolute;
@@ -88,16 +94,6 @@
 }
 
 @keyframes show {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes swipeout {
   0% {
     opacity: 0;
   }
