--- a/src/components/MenuHead.scss
+++ b/src/components/MenuHead.scss
@@ -15,7 +15,7 @@
   width: 100%;
 
   &.menuActive {
-    box-shadow: inset 0 0 12px 4px rgba(0, 0, 0, .25);
+    box-shadow: inset 0 0 12px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
@@ -36,7 +36,7 @@
 .menu-container {
   align-items: flex-start;
   border-radius: .45rem;
-  box-shadow: rgba(0, 0, 0, .2) 2px 2px 10px 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   display: flex;
   justify-content: flex-start;
   max-height: 600px;
