--- a/src/components/MenuHead.scss
+++ b/src/components/MenuHead.scss
@@ -35,7 +35,7 @@
 
 .menu-container {
   align-items: flex-start;
-  border-radius: .45rem;
+  border-radius: 0.45rem;
   box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   display: flex;
   justify-content: flex-start;
@@ -46,7 +46,7 @@
   width: 250px;
 
   &.menuActive {
-    animation: show .1s ease-in;
+    animation: show 0.1s ease-in;
     visibility: visible;
   }
 }
