--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -63,7 +63,7 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   }
 
   &.selected {
-    background: $blue;
+    background: var(--background);
     color: $white;
   }
 
