--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -10,7 +10,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 .menu-head {
   align-items: center;
-  background: #0080ff;
+  background: var(--background);
   border-radius: 50%;
   cursor: pointer;
   display: flex;
