--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -41,7 +41,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 .menu-container {
   align-items: flex-start;
-  border-radius: 0.45rem;
+  border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   display: flex;
   justify-content: flex-start;
