--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -9,10 +9,11 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   height: 100%;
   justify-content: flex-start;
   width: 100%;
+  outline: 0;
 }
 
 .sub-menu-wrapper {
-  animation: show 0.2s ease-in;
+  animation: show 0.1s ease-in;
   border-radius: 0.5rem;
   box-shadow: $shadow;
   left: 102%;
@@ -74,6 +75,10 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   &:hover:not(.selected) {
     background: rgba(0, 0, 0, 0.1);
     color: $black;
+  }
+
+  &.highlight {
+    border: 1px solid red;
   }
 
   &.flip {
