--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,7 +1,4 @@
-$black: #000;
-$white: #fff;
-$light-gray: #e5e5e5;
-$shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
+@import "./colors.scss";
 
 .menu-wrapper {
   align-items: flex-start;
@@ -10,6 +7,7 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   justify-content: flex-start;
   width: 100%;
   outline: 0;
+  z-index: 9999;
 }
 
 .sub-menu-wrapper {
@@ -24,6 +22,10 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
 
 .chev-icon {
   margin-left: auto;
+
+  &.disabled {
+    opacity: 0.45;
+  }
 }
 
 .menu-list {
@@ -38,6 +40,10 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
 
   .name {
     padding-left: 0.5rem;
+
+    &.disabled {
+      opacity: 0.45;
+    }
   }
 }
 
@@ -53,9 +59,9 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   width: 100%;
   background: var(--menu-background);
 
-  &:not(:last-child) {
-    border-bottom: 1px solid $light-gray;
-  }
+  // &:not(:last-child) {
+  //   border-bottom: 1px solid $light-gray;
+  // }
 
   &:first-child {
     border-top-left-radius: 6px;
@@ -99,6 +105,10 @@ $shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
       left: auto;
       right: 102%;
     }
+  }
+
+  &.disabled {
+    cursor: default;
   }
 }
 
