--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,9 @@
 $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: none;
+}
+
 .menu-head-wrapper {
   position: fixed;
   z-index: 9999;
@@ -18,7 +22,6 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   display: flex;
   height: 100%;
   justify-content: center;
-  outline: 0;
   position: relative;
   width: 100%;
   pointer-events: none;
@@ -44,7 +47,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 .menu-container {
   align-items: flex-start;
-  border-radius: 6px;
+  border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
   display: flex;
   justify-content: flex-start;
