--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@
 
 body {
   min-height: 980px;
-  background-image: linear-gradient( 109.6deg,  rgba(204,228,247,1) 11.2%, rgba(237,246,250,1) 100.2% );
+  /* background-image: linear-gradient( 109.6deg,  rgba(204,228,247,1) 11.2%, rgba(237,246,250,1) 100.2% ); */
 }
