--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -1,4 +1,4 @@
 $black: #000;
 $white: #fff;
 $light-gray: #e5e5e5;
-$shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
+$shadow: rgb(0 0 0 / 20%) 2px 2px 10px 2px;
