--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -9,7 +9,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   z-index: 9999;
   touch-action: none;
 
-  &:not(.dragActive) {
+  &:not(.drag-active) {
     transition: left 0.2s $cubic, right 0.2s $cubic, top 0.2s $cubic, bottom 0.2s $cubic;
   }
 }
@@ -26,8 +26,8 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   width: 100%;
   pointer-events: none;
 
-  &.menuActive {
-    box-shadow: inset 0 0 12px 4px rgba(0, 0, 0, 0.25);
+  &.menu-active {
+    box-shadow: inset 0 0 12px 4px rgb(0 0 0 / 25%);
   }
 }
 
@@ -48,7 +48,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 .menu-container {
   align-items: flex-start;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 10px 2px;
+  box-shadow: rgb(0 0 0 / 20%) 2px 2px 10px 2px;
   display: flex;
   justify-content: flex-start;
   max-height: 600px;
@@ -58,7 +58,7 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   width: 250px;
   background: #fff;
 
-  &.menuActive {
+  &.menu-active {
     animation: show 0.15s $cubic;
     visibility: visible;
   }
@@ -72,12 +72,12 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 @keyframes show {
   0% {
-    opacity: 0;
+    opacity: 0%;
     transform: scale(0.95);
   }
 
   100% {
-    opacity: 1;
+    opacity: 100%;
     transform: scale(1);
   }
 }
