--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -42,7 +42,7 @@
   }
 
   &.disabled {
-    opacity: 45%;
+    opacity: 0.45;
   }
 }
 
@@ -196,10 +196,10 @@
 
 @keyframes show {
   0% {
-    opacity: 0%;
+    opacity: 0;
   }
 
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
