--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -72,12 +72,12 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
 @keyframes show {
   0% {
-    opacity: 0%;
+    opacity: 0;
     transform: scale(0.95);
   }
 
   100% {
-    opacity: 100%;
+    opacity: 1;
     transform: scale(1);
   }
 }
