chore: upgrade packages

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -42,7 +42,7 @@
   }
 
   &.disabled {
-    opacity: 45%;
+    opacity: 0.45;
   }
 }
 
@@ -149,7 +149,7 @@
   }
 
   &.selected {
-    background-color: transparentize(#cccc, 0.5);
+    background-color: rgba(#cccc, 0.5);
   }
 
   &.highlight {
@@ -196,10 +196,10 @@
 
 @keyframes show {
   0% {
-    opacity: 0%;
+    opacity: 0;
   }
 
   100% {
-    opacity: 100%;
+    opacity: 1;
   }
 }
