--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -10,7 +10,8 @@ $cubic: cubic-bezier(0.25, 0.46, 0.45, 0.94);
   touch-action: none;
 
   &:not(.drag-active) {
-    transition: left 0.2s $cubic, right 0.2s $cubic, top 0.2s $cubic, bottom 0.2s $cubic;
+    transition: left 0.2s $cubic, right 0.2s $cubic, top 0.2s $cubic,
+      bottom 0.2s $cubic;
   }
 }
 
